# hotel

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a_var.h  actor.c  args-resolve.tl  args.c  array-test.tl  bad.tl  benchmark.sh  body.c  body.h  boot-tlmeta.tl  boot.tl  bootstrap.tl  buf.c  buf.h  buffer.c  buildserver.tl  bytecode.c  call.c  clumsy.txt  code.c  code.h  code.tl  comp.tl  compile.c  compile.tl  compiler.c  compiler.tl  config.h  controlflow.c  coverage.sh  createboot.tl  debug.h  docgen.tlg  editor.tl  env.c  (+59 more)
boot/: boot.tl  compiler.tlb.h  fase1.tl  fase2.tl  fase3.tl  hotelparser.c  init.tlb.h  xmlparser.c
boot/pregen/: compiler.tlb.h  hotelparser.c  init.tlb.h  jsonparser.c
cmodules/: Makefile  audio.c  graphics.c  graphics.h  image.c  image.h  openssl.c  sdl.c  zlib.c
docs/: proposal-doc.tl  proposal-match-syntax.tl
ev/: ev.c
examples/: autobuilder.tl  redis.tl
extra/: Makefile  tlcanvas.c
graphics/: Editor.tl  Makefile  app.c  app.h  graphics.c  graphics.h  gtk.c  image.c  image.h  mac.m  run.tl  scene.c  scene.h  widget.tl  window.c  window.h
hotelparser/: Makefile  abstract.tl  calc.tlg  example.tl  hotel.tlg  json.tlg  main.c  tlmeta.c  tlmeta.tlg  warning.c  xml.tlg
include/: a_var.h  debug.h  platform.h  tl.h
libev/: ev.c
libmp/: CMakeLists.txt  bn_mp_get_int.c  bn_mp_read_radix.c  bn_mp_set_int.c  tommath.h
llib/: Makefile  lhashmap-test.c  lhashmap.c  lhashmap.h  lqueue-test.c  lqueue.c  lqueue.h
modules/: Persist.tl  commandline.tl  compiler.tl  couchdb.tl  dom.tl  email.tl  html.tl  html.tlg  http.tl  httpparser.tl  init.tl  io.tl  json.tl  log.tl  repl.tl  sizzle.tlg  snippets.tl  ssl.tl  url.tl
parser/: Makefile  match-parser.tlg  parser.tlg  process.tl  test-input.tl  tlmeta-base.tl  tlmeta.tl  tokenizer.tlg
parser2/: Makefile  parser.c  test.tl  tokens.c
parser3/: Makefile  in.tl  parser.tlg
spec/: array.tl  bin.tl  binops.tl  buffer.tl  classes.tl  eval.tl  filter.tl  find.tl  goto.tl  hashmap.tl  json.tl  list.tl  map.tl  numbers.tl  object.tl  regex.tl  set.tl  string.tl  syntax.tl  time.tl  utf8.tl  values.tl
support/sublime/: tl.tmLanguage
support/vim/ftdetect/: tl.vim
support/vim/indent/: tl.vim
support/vim/syntax/: tl.vim
test/: args.tl  array-test.tl  array.tl  assert-syntax.ref  assert-syntax.tl  asserts.tl  asynctask.tl  callfirst.tl  continuation.ref  continuation.tl  desugaredclasses.ref  desugaredclasses.tl  env-localobject.tl  env.tl  exec.tl  fib.tl  google.tl  goto.ref  goto.tl  httptest.tl  json.tl  kargs.ref  kargs.tl  latch.tl  list-anon-body.tl  list-arith.tl  list-map.tl  list-set-map.ref  list-set-map.tl  luhn.tl  multipleresult.tl  mutual-rec.tl  nonlexicalreturn.ref  nonlexicalreturn.tl  object-with-call.tl  openssl.tl  openssltest.tl  persist-test.tl  postpone.tl  readfile.ref  (+26 more)
test/noboot/: Makefile  args.ref  args.tl  array.ref  array.tl  assert-syntax.tl  asserts.ref  asserts.tl  asynctask.tl  callfirst.tl  chars.ref  chars.tl  continuation.tl  desugaredclasses.tl  env-closing.ref  env-closing.tl  env-localobject.tl  env.tl  exec.ref  exec.tl  fib.tl  goto.tl  guards.ref  guards.tl  hashmap.ref  hashmap.tl  kargs.ref  kargs.tl  latch.ref  latch.tl  lazy.ref  lazy.tl  list-anon-body.tl  list-map.ref  list-map.tl  multipleresult.tl  multipleresultscall.tl  mutual-rec.tl  nonlexicalreturn.tl  object-with-call.tl  (+24 more)
tlEditor/tlEditor/: AppDelegate.h  AppDelegate.m  main.m  tlEditor-Info.plist
tlEditor/tlEditor.xcodeproj/: project.pbxproj
tlEditor/tlEditor/Base.lproj/: MainMenu.xib
tlEditor/tlEditorTests/: tlEditorTests-Info.plist  tlEditorTests.m
tlmeta2/: Makefile  example.tl  in.tlg  main.c  mini.tlg  scope.tl  tlmeta.c  tlmeta.tlg  xml.tlg
vm/: Makefile  args.c  args.h  args_test.c  array.c  array.h  audio.c  bcode.c  bcode.h  bin.c  bin.h  buf.c  buffer.c  buffer.h  call.c  code.c  code.h  controlflow.c  controlflow.h  debug.c  debug.h  debugger.c  debugger.h  env.c  env.h  env_test.c  error.c  error.h  eval.c  eval.h  evio.c  evio.h  frame.c  frame.h  hashmap.c  hashmap.h  hashmap_test.c  hotelparser.c  http.c  idset.c  (+60 more)
